<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">NotePad</string>

    <string name="title_edit_title">笔记标题:</string>
    <string name="title_create">新笔记</string>
    <string name="title_edit">编辑: %1$s</string>
    <string name="title_notes_list">NotePad</string>

    <string name="menu_add">添加记事本</string>
    <string name="menu_save">保存</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开</string>
    <string name="menu_revert">撤销修改</string>
    <string name="menu_copy">复制</string>
    <string name="menu_paste">粘贴</string>
    <string name="menu_search">搜索</string>
    <string name="menu_sort">排序</string>
    <string name="menu_sort1">按创建时间排序</string>
    <string name="menu_sort2">按修改时间排序</string>
    <string name="menu_sort3">按颜色排序</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">编辑笔记</string>
    <string name="resolve_title">编辑标题</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="title_activity_note_search">NoteSearch</string>
    <string name="title_activity_output_text">OutputText</string>
</resources>