<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_color"
        android:title="改变背景颜色"
        android:icon="@drawable/background"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_output"
        android:title="导出记事本" />
    <item android:id="@+id/menu_revert"
        android:icon="@drawable/ic_menu_revert"
        android:title="@string/menu_revert" />
    <item android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:alphabeticShortcut='s'
        android:title="@string/menu_save"
        app:showAsAction="ifRoom|withText" />
</menu>